force-app/main/default/objects/Account/fields/General_Comments__c.field-meta.xml
<CustomField>
    <fullName>General_Comments__c</fullName>
    <label>General Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>