force-app/main/default/objects/Account/fields/Glassdoor_Review__c.field-meta.xml
<CustomField>
    <fullName>Glassdoor_Review__c</fullName>
    <label>Glassdoor Review</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>