force-app/main/default/objects/Account/fields/Glassdoor_URL__c.field-meta.xml
<CustomField>
    <fullName>Glassdoor_URL__c</fullName>
    <label>Glassdoor URL</label>
    <type>Url</type>
</CustomField>