force-app/main/default/objects/Account/fields/Indeed_URL__c.field-meta.xml
<CustomField>
    <fullName>Indeed_URL__c</fullName>
    <label>Indeed URL</label>
    <type>Url</type>
</CustomField>