force-app/main/default/objects/Account/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>Size of company</description>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-200</fullName>
            </value>
            <value>
                <fullName>201-500</fullName>
            </value>
            <value>
                <fullName>501-1000</fullName>
            </value>
            <value>
                <fullName>1001-5000</fullName>
            </value>
            <value>
                <fullName>5001-10000</fullName>
            </value>
            <value>
                <fullName>10000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>