force-app/main/default/objects/Account/recordTypes/Recruiting_Firm.recordType-meta.xml
<RecordType>
    <fullName>Recruiting_Firm</fullName>
    <active>true</active>
    <label>Recruiting Firm</label>
</RecordType>